<resources>
    <string name="app_name">CA2MobileApplicationDevelopment</string>
    <string name="title_label">BookWorm</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="name_label">Name:</string>
    <string name="dob_label">Date of Birth:</string>
    <string name="dashboard_app_bar">Books</string>
    <string name="search_textView">Search by Name:</string>
    <string name="genre_textView">Genre:</string>
    <string name="review_button">Reviews</string>
    <string name="status_label">Status:</string>
    <string name="add_book_menu_title">Add Book</string>
    <string name="add_book_app_bar">Add Book</string>
    <string name="title_label_add_book">Title:</string>
    <string name="add_book_button">Add Book</string>
    <string name="genre_label_add_book">Genre:</string>
    <string name="author_label_add_book">Author:</string>
    <string name="date_label_add_book">Date:</string>
    <string name="view_profile_menu">View Profile</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="name_textView">Name:</string>
    <string name="profile_app_bar">Profile</string>
    <string name="dob_textView">DOB:</string>
    <string name="delete_book_menu_option">Delete Book</string>
    <string name="update_book_menu_option">Update Book</string>
    <string name="update_book_button">Update Book</string>
</resources>